[gd_scene load_steps=18 format=3 uid="uid://xtqbie28512d"]

[ext_resource type="Script" path="res://GUI/GUI.gd" id="1"]
[ext_resource type="Theme" uid="uid://bs3li7lo5h4lm" path="res://GUI/Theme.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://b6k7tg1vynpk0" path="res://Planets/Rivers/Rivers.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://b3nvchjx6veeg" path="res://stars.png" id="4"]
[ext_resource type="Script" path="res://GUI/SpritesheetPopup.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://nf5qxhdss4sb" path="res://GUI/progress-under.png" id="6"]
[ext_resource type="Texture2D" uid="uid://pj2mm533qpof" path="res://GUI/progress-over.png" id="7"]
[ext_resource type="PackedScene" uid="uid://n2kqnn12anlo" path="res://GUI/ColorPickerButton.tscn" id="8"]
[ext_resource type="Material" uid="uid://c4uk5xgr28thd" path="res://GUI/StarParticles.tres" id="9"]
[ext_resource type="Script" path="res://GUI/GifPopup.gd" id="10"]
[ext_resource type="Script" path="res://GUI/ImportExportPopup.gd" id="11"]

[sub_resource type="Shader" id="1"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec2 offset = vec2(0.0);


float rand(vec2 coord) {
	return fract(sin(dot(coord.xy ,vec2(12.9898,78.233))) * 43758.5453);
}
vec2 rotate(vec2 coord, float angle){
	coord -= 0.5;
	coord *= mat2(vec2(cos(angle),-sin(angle)),vec2(sin(angle),cos(angle)));
	return coord + 0.5;
}

void fragment() {
	vec2 uv = rotate(UV, TIME * 0.2);

	vec4 col = vec4(1.0) + rand(UV + vec2(TIME*0.0000001,0.0)) * 0.03;
	
	col = col* vec4(
		abs(sin(uv.x * cos(offset.x)+ TIME * 0.105)),
		abs(sin((cos(uv.x + uv.y) + cos(offset.x + offset.y) + TIME * 0.059))) ,
		abs(cos(uv.y * sin(offset.y) + TIME * 0.0253)) ,
		1.0);

	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id="2"]
shader = SubResource("1")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="CanvasItemMaterial" id="3"]
particles_animation = true
particles_anim_h_frames = 11
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ViewportTexture" id="7"]
viewport_path = NodePath("PlanetViewport")

[sub_resource type="Shader" id="5"]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D SCREEN_TEXTURE: hint_screen_texture, filter_linear_mipmap;
uniform float abberation: hint_range(-0.1, 0.1);


void fragment () {
	vec4 color = vec4(1.0);




	color.r = texture(SCREEN_TEXTURE, SCREEN_UV - vec2(abberation,0.0)).r;
	color.g = texture(SCREEN_TEXTURE, SCREEN_UV).g;
	color.b = texture(SCREEN_TEXTURE, SCREEN_UV + vec2(abberation,0.0)).b;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="6"]
shader = SubResource("5")
shader_parameter/abberation = 0.001

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Light" type="ColorRect" parent="."]
material = SubResource("2")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dark" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.831373)

[node name="Particles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.513726)
material = SubResource("3")
position = Vector2(256, 150)
amount = 50
process_material = ExtResource("9")
texture = ExtResource("4")
lifetime = 50.0
preprocess = 50.0

[node name="PlanetViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(200, 200)

[node name="PlanetHolder" type="Control" parent="PlanetViewport"]
layout_mode = 3
anchors_preset = 0

[node name="Control" parent="PlanetViewport/PlanetHolder" instance=ExtResource("3")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="PlanetHolder2" type="CenterContainer" parent="."]
layout_mode = 0

[node name="PlanetHolder" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ViewportTexture" type="TextureRect" parent="PlanetHolder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("7")
expand_mode = 1

[node name="Settings" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label5" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "Planet type:"

[node name="OptionButton" type="OptionButton" parent="Settings/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2")
shortcut_in_tooltip = false

[node name="Control2" type="Control" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "seed:"

[node name="Seed" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="SeedText" type="LineEdit" parent="Settings/VBoxContainer/Seed"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "0"
caret_blink = true

[node name="Button" type="Button" parent="Settings/VBoxContainer/Seed"]
layout_mode = 2
theme = ExtResource("2")
text = "rand"

[node name="Control" type="Control" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "pixels: "

[node name="SliderPixels" type="HSlider" parent="Settings/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2")
min_value = 16.0
value = 100.0

[node name="InputPixels" type="LineEdit" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "100"
caret_blink = true

[node name="Control4" type="Control" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "Rotation:"

[node name="SliderRotation" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
max_value = 6.28
step = 0.01
value = 6.28

[node name="Control6" type="Control" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label8" type="Label" parent="Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "DITHER:"

[node name="ShouldDither" type="Button" parent="Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "on"

[node name="Control3" type="Control" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label7" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "Colors:"

[node name="ColorButtonHolder" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerButton" parent="Settings/VBoxContainer/ColorButtonHolder" instance=ExtResource("8")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="RandomizeColors" type="Button" parent="Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "random"

[node name="ResetColors" type="Button" parent="Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "reset"

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="ImportExportColors" type="Button" parent="Settings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "import / export"

[node name="Control7" type="Control" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="LayerOptions" type="MenuButton" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "Layers"
flat = false

[node name="Control5" type="Control" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "Export:"

[node name="ExportPNG" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "png"

[node name="ExportGIF" type="Button" parent="Settings/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2")
text = "GIF"

[node name="ExportSpriteSheet" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "spritesheet"

[node name="Abberation" type="ColorRect" parent="."]
material = SubResource("6")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 300.0
offset_bottom = 300.0

[node name="Popup" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.172549, 0.207843, 0.301961, 0.596078)
script = ExtResource("5")

[node name="PopupFront" type="ColorRect" parent="Popup"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.172549, 0.207843, 0.301961, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/PopupFront"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpritesheetSettings" type="HBoxContainer" parent="Popup/PopupFront/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "frames (width)"

[node name="WidthFrames" type="SpinBox" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
max_value = 1000.0
value = 50.0
rounded = true

[node name="Label2" type="Label" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "frames (height)"

[node name="HeightFrames" type="SpinBox" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
max_value = 1000.0
value = 1.0

[node name="Control2" type="Control" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "Pixel Margin"

[node name="PixelMargin" type="SpinBox" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
max_value = 1000.0

[node name="Control" type="Control" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FrameInfo" type="Label" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "Total Frames: 50"

[node name="ResolutionInfo" type="Label" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "Image resolution:
5000x100"

[node name="WarningResolution" type="Label" parent="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer2"]
visible = false
layout_mode = 2
theme = ExtResource("2")
text = "Image Width/Height cannot exceed 16384 pixels."

[node name="TextureProgress" type="TextureProgressBar" parent="Popup/PopupFront/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("6")
texture_progress = ExtResource("7")

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/PopupFront/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="Popup/PopupFront/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "cancel"

[node name="ExportButton" type="Button" parent="Popup/PopupFront/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "export"

[node name="ImportExportPopup" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.172549, 0.207843, 0.301961, 0.596078)
script = ExtResource("11")

[node name="PopupFront" type="ColorRect" parent="ImportExportPopup"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.172549, 0.207843, 0.301961, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ImportExportPopup/PopupFront"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ImportExportPopup/PopupFront/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2")
caret_blink = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ImportExportPopup/PopupFront/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = " X "

[node name="Control" type="Control" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "clipboard:"

[node name="CopyToClipboard" type="Button" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "Copy to"

[node name="PasteFromClipboard" type="Button" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "Paste from"
expand_icon = true

[node name="Control2" type="Control" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label2" type="Label" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "colors:"

[node name="ApplyColors" type="Button" parent="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "apply"

[node name="GifPopup" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.172549, 0.207843, 0.301961, 0.596078)
script = ExtResource("10")

[node name="PopupFront" type="ColorRect" parent="GifPopup"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.172549, 0.207843, 0.301961, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GifPopup/PopupFront"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpritesheetSettings" type="HBoxContainer" parent="GifPopup/PopupFront/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "frames"

[node name="GifFrameCount" type="SpinBox" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
max_value = 1000.0
value = 60.0
rounded = true

[node name="Label2" type="Label" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "Length (Seconds)"

[node name="GifTime" type="SpinBox" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
max_value = 1000.0
step = 0.1
value = 10.0

[node name="Label3" type="Label" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "Frame Delay (Seconds)"

[node name="FrameDelay" type="SpinBox" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
max_value = 10.0
step = 0.001
value = 0.167

[node name="Control" type="Control" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "frames PEr Second"

[node name="Control" type="Control" parent="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer2"]
layout_mode = 2

[node name="TextureProgress" type="TextureProgressBar" parent="GifPopup/PopupFront/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("6")
texture_progress = ExtResource("7")

[node name="HBoxContainer" type="HBoxContainer" parent="GifPopup/PopupFront/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="GifPopup/PopupFront/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "cancel"

[node name="ExportButton" type="Button" parent="GifPopup/PopupFront/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "export"

[node name="Panel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 200.0
offset_right = 515.0
offset_bottom = 325.0
color = Color(0.172549, 0.207843, 0.301961, 1)

[node name="PickerExit" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 17.0
theme = ExtResource("2")
text = "x"

[node name="ColorPicker" type="ColorPicker" parent="Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 12.0
offset_right = 310.0
offset_bottom = 441.0
theme = ExtResource("2")
presets_visible = false

[connection signal="item_selected" from="Settings/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="Settings/VBoxContainer/Seed/SeedText" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/Seed/Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/SliderPixels" to="." method="_on_SliderPixels_value_changed"]
[connection signal="text_changed" from="Settings/VBoxContainer/InputPixels" to="." method="_on_InputPixels_text_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/SliderRotation" to="." method="_on_SliderRotation_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer2/ShouldDither" to="." method="_on_ShouldDither_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer/RandomizeColors" to="." method="_on_RandomizeColors_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer/ResetColors" to="." method="_on_ResetColors_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer3/ImportExportColors" to="." method="_on_ImportExportColors_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/ExportPNG" to="." method="_on_ExportPNG_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/ExportGIF" to="." method="_on_ExportGIF_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/ExportSpriteSheet" to="." method="_on_ExportSpriteSheet_pressed"]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="value_changed" from="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer/WidthFrames" to="Popup" method="_on_WidthFrames_value_changed"]
[connection signal="value_changed" from="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer/HeightFrames" to="Popup" method="_on_HeightFrames_value_changed"]
[connection signal="value_changed" from="Popup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer/PixelMargin" to="Popup" method="_on_PixelMargin_value_changed"]
[connection signal="pressed" from="Popup/PopupFront/VBoxContainer/HBoxContainer/CancelButton" to="Popup" method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Popup/PopupFront/VBoxContainer/HBoxContainer/ExportButton" to="Popup" method="_on_ExportButton_pressed"]
[connection signal="pressed" from="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2/HBoxContainer/CloseButton" to="ImportExportPopup" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2/CopyToClipboard" to="ImportExportPopup" method="_on_CopyToClipboard_pressed"]
[connection signal="pressed" from="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2/PasteFromClipboard" to="ImportExportPopup" method="_on_PasteFromClipboard_pressed"]
[connection signal="pressed" from="ImportExportPopup/PopupFront/HBoxContainer/VBoxContainer2/ApplyColors" to="ImportExportPopup" method="_on_ApplyColors_pressed"]
[connection signal="cancel_gif" from="GifPopup" to="." method="_on_GifPopup_cancel_gif"]
[connection signal="value_changed" from="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer/GifFrameCount" to="GifPopup" method="_on_GifFrameCount_value_changed"]
[connection signal="value_changed" from="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer/GifTime" to="GifPopup" method="_on_GifTime_value_changed"]
[connection signal="value_changed" from="GifPopup/PopupFront/VBoxContainer/SpritesheetSettings/VBoxContainer/FrameDelay" to="GifPopup" method="_on_FrameDelay_value_changed"]
[connection signal="pressed" from="GifPopup/PopupFront/VBoxContainer/HBoxContainer/CancelButton" to="GifPopup" method="_on_CancelButton_pressed"]
[connection signal="pressed" from="GifPopup/PopupFront/VBoxContainer/HBoxContainer/ExportButton" to="GifPopup" method="_on_ExportButton_pressed"]
[connection signal="pressed" from="Panel/PickerExit" to="." method="_on_PickerExit_pressed"]
